# sncf-graph-rust

./: Cargo.toml  README.md  docker-compose.yaml  mongo.sh
ansible/: inventory  mongo_cluster.yml
ansible/roles/mongo_cluster/defaults/: main.yml
ansible/roles/mongo_cluster/tasks/: add_shards.yml  init_config_servers.yml  init_shards.yml  main.yml
ansible/roles/mongo_cluster/templates/: init_shard.js.j2
data/: calendar_dates.csv  feed_info.csv  routes.csv  stops.csv
src/: main.rs  old_main.rs  pagination.rs
src/controllers/: auth_controller.rs  health_controller.rs  mod.rs  routes_controller.rs  stop_times_controller.rs  stops_controller.rs  trips_controller.rs
src/models/: mod.rs  route.rs  stop.rs  stop_time.rs  trip.rs
src/services/: authentication.rs  mod.rs  route_service.rs  stop_service.rs  stop_time_service.rs  trip_service.rs
