[package]
name = "poc-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
csv = "1.3.0"
futures = "0.3.30"
mongodb = "2.8.2"
petgraph = "0.6.4"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.115"
tracing-actix-web = "0.7.10"
env_logger = "0.11.3"
juniper = "0.16.1"
actix-multipart = "0.6.1"
futures-util = "0.3.30"
reqwest = { version = "0.12.4", features = ["json"] }
serde_urlencoded = "0.7.1"
actix-web-middleware-keycloak-auth = "0.4.2"
uuid = "1.8.0"
